# linq-cpp

./: CMakeLists.txt
examples/: example.cpp  example1.cpp
include/: linq.hpp
test/: minimal_smoke_test.cpp  smoke_test.cpp
